# icbhi_2017_challenge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: ci.yaml  dependabot.yaml
docs/: notes.md
res/: split.csv
src/code/: __init__.py  audio_summary.py  plot_spectrogram.ipynb  preprocessing.py  s00_audio_summary.py  s01_plot_spectrogram.ipynb  s02_preprocessing.py  s03_train_dev_test_split.py  s04_ml_pipeline.py  s05_inference.py  train_dev_test_split.py  train_test.py
src/test/: __init__.py  test_s02_preprocessing.py
