[tool.poetry]
name = "icbhi-2017-challenge"
version = "0.1.0"
description = "Classification of respiratory sounds using the ICBHI 2017 challenge dataset"
authors = ["fabiocat93 <fabio-cat93@hotmail.it>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fabiocat93/icbhi_2017_challenge"
repository = "https://github.com/fabiocat93/icbhi_2017_challenge"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest-xdist = {version = "~=3.6.1", extras = ["psutil"]}
pytest-mock = "~=3.14"
mypy = "~=1.9"
pre-commit = "~=4.0"
ruff = "~=0.3"
codespell = "~=2.3"
jupyter = "~=1.0"
ipywidgets = "~=8.1"
ipykernel = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pdoc = "~=15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
