[tool.poetry]
name = "icbhi-2017-challenge"
version = "0.1.0"
description = "Some code for the classification of respiratory sounds using the ICBHI 2017 challenge dataset."
authors = ["fabiocat93 <fabiocat@mit.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fabiocat93/icbhi_2017_challenge"
repository = "https://github.com/fabiocat93/icbhi_2017_challenge"
packages = [{include = "code", from = "src"}]
keywords = ["respiratory sounds", "ICBHI 2017", "classification", "deep learning", "machine learning"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "~=2.5"
torchaudio = "~=2.5"
torchvision = "~=0.20"
pandas = "~=2.2"
tqdm = "~=4.67"
python-ffmpeg = "~=2.0"
soundfile = "~=0.13"
matplotlib = "~=3.10"
speechbrain = "~=1.0"
scikit-learn = "~=1.6"
pytorch-lightning = "~=2.5"
wandb = "~=0.19"
transformers = "~=4.48"
einops = "~=0.8"
timm = "~=1.0"
numpy = "~=2.1"
torch-audiomentations = "~=0.12"
huggingface-hub = "~=0.27"
seaborn = "~=0.13"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest-xdist = {version = "~=3.6.1", extras = ["psutil"]}
pytest-mock = "~=3.14"
mypy = "~=1.9"
pre-commit = "~=4.0"
ruff = "~=0.3"
codespell = "~=2.3"
jupyter = "~=1.0"
ipywidgets = "~=8.1"
ipykernel = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pdoc = "~=15.0"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "src/tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
